Fix issue with unnecessary scrollbar

--- a/style.css
+++ b/style.css
@@ -1,4 +1,7 @@
 body{
+    width: 100vw;
+    height: 100vh;
+    overflow-x: hidden;
     font-family: Arial, Helvetica, sans-serif;
     background-color: rgb(26, 26, 53);
     color: rgb(216, 213, 213);
@@ -8,6 +11,7 @@ body{
 .header{
     display: flex;
     justify-content: center;
+    width: 100%;
     background-color: rgb(15, 15, 32);
     padding: 40px 0;
     margin: 0;
